syntax = "proto3";

option go_package = "github.com/IdentityStolen/RiskOS";

service RiskChecker {
  rpc TransScrutiny (TransRequest) returns (TransResponce) {}
}

message TransRequest {
    enum TransferType {
      UNDEFINED = 0;
      ACH = 1;
      EXTERNAL = 2;
    }

    string user_id = 1;
    float latitude = 2;
    float longitude = 3;
    float amount = 4;
    TransferType transfer_type = 5;
    string from_id = 6;
    string to_id = 7;
}

message TransResponce {
    bool is_ok = 1;
}